InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/fields/vlocity_ins__DestinationQueueId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DestinationQueueId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Queue</label>
    <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
    <relationshipLabel>Manual Queue Assignment Rules(Destination)</relationshipLabel>
    <relationshipName>DestinationAssignmentRules</relationshipName>
    <type>Lookup</type>
</CustomField>