InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/fields/vlocity_ins__DestinationUserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DestinationUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assignment Rules</relationshipLabel>
    <relationshipName>AssignmentRules</relationshipName>
    <type>Lookup</type>
</CustomField>