InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/fields/vlocity_ins__SourceQueueId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceQueueId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Queue</label>
    <referenceTo>vlocity_ins__ManualQueue__c</referenceTo>
    <relationshipLabel>Assignment Rules(Source)</relationshipLabel>
    <relationshipName>SourceAssignmentRules</relationshipName>
    <type>Lookup</type>
</CustomField>