InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/validationRules/vlocity_ins__SourceQueueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__SourceQueueValidation</fullName>
    <active>true</active>
    <description>A Source Queue is required</description>
    <errorConditionFormula>ISBLANK(vlocity_ins__SourceQueueId__c)</errorConditionFormula>
    <errorDisplayField>vlocity_ins__SourceQueueId__c</errorDisplayField>
    <errorMessage>Source Queue is required</errorMessage>
</ValidationRule>