InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/validationRules/vlocity_ins__SourceTaskValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__SourceTaskValidation</fullName>
    <active>true</active>
    <description>Source Task should be empty</description>
    <errorConditionFormula>NOT(ISBLANK(vlocity_ins__SourceTaskId__c))</errorConditionFormula>
    <errorDisplayField>vlocity_ins__SourceTaskId__c</errorDisplayField>
    <errorMessage>Source Task should be empty</errorMessage>
</ValidationRule>