InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssignmentRule__c/validationRules/vlocity_ins__UserTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__UserTypeValidation</fullName>
    <active>true</active>
    <description>A Destination User is required if Assignment Type is User</description>
    <errorConditionFormula>AND(ISPICKVAL(vlocity_ins__AssignmentType__c,&apos;User&apos;), ISBLANK(vlocity_ins__DestinationUserId__c))</errorConditionFormula>
    <errorDisplayField>vlocity_ins__DestinationUserId__c</errorDisplayField>
    <errorMessage>Destination User is required for User Assignment Type</errorMessage>
</ValidationRule>